--- a/login.html
+++ b/login.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gbk" />
-<title>ÓÃ»§µÇÂ¼</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>ç”¨æˆ·ç™»å½•</title>
   <style type="text/css">
     html{font-size:12px;}
 	fieldset{width:300px; margin: 0 auto;}
@@ -19,13 +19,13 @@ function InputCheck(LoginForm)
 {
   if (LoginForm.username.value == "")
   {
-    alert("ÇëÊäÈëÓÃ»§Ãû!");
+    alert("è¯·è¾“å…¥ç”¨æˆ·å!");
     LoginForm.username.focus();
     return (false);
   }
   if (LoginForm.password.value == "")
   {
-    alert("ÇëÊäÈëÃÜÂë!");
+    alert("è¯·è¾“å…¥å¯†ç !");
     LoginForm.password.focus();
     return (false);
   }
@@ -37,18 +37,18 @@ function InputCheck(LoginForm)
 <body>
 <div>
 <fieldset>
-<legend>ÓÃ»§µÇÂ¼</legend>
+<legend>ç”¨æˆ·ç™»å½•</legend>
 <form name="LoginForm" method="post" action="login.php" onSubmit="return InputCheck(this)">
 <p>
-<label for="username" class="label">ÓÃ»§Ãû:</label>
+<label for="username" class="label">ç”¨æˆ·å:</label>
 <input id="username" name="username" type="text" class="input" />
 <p/>
 <p>
-<label for="password" class="label">ÃÜ Âë:</label>
+<label for="password" class="label">å¯† ç :</label>
 <input id="password" name="password" type="password" class="input" />
 <p/>
 <p>
-<input type="submit" name="submit" value="  È· ¶¨  " class="left" />
+<input type="submit" name="submit" value="  ç¡® å®š  " class="left" />
 </p>
 </form>
 </fieldset>
